--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       container_name: mariadb
       networks:
         - inception
+      env_file:
+        - .env
       volumes:
         - mariadb:/var/lib/mysql
       init: true
@@ -29,8 +31,8 @@ services:
       container_name: wordpress
       networks:
         - inception
-      # ports:
-      #   - "9000:9000"
+      env_file:
+        - .env
       init: true
       depends_on:
         - mariadb
@@ -42,6 +44,8 @@ services:
       container_name: nginx
       networks:
         - inception
+      env_file:
+        - .env
       ports:
         - "433:433"
       init: true
